websitev2/i18n/de/docusaurus-plugin-content-docs/version-13.0/about-the-consoles/t1-and-t2.md
---
id: t1-and-t2
title: T1 and T2
sidebar_label: T1 and T2
original_id: t1-and-t2
---

import Keys from '@site/src/components/key.ts';
import Video from '@site/src/components/video.tsx';

T1 und T2 sind USB-Dongles zum Betrieb an einem Computer (PC oder
Laptop) mit Windows 7 oder höher (64bit). Sie enthalten jeweils den
Lizenzkey und die DMX-Ausgabe.

Der T1 stellt einen DMX-Anschluss (5pol XLR) zur Ausgabe eines
DMX-Universums zur Verfügung.

![Titan One](/docs/images/T1.png)

Der T2 kann zwei Universen auf 5-poligen XLR-Buchsen ausgeben und hat
einen Audio/LTC-Eingang. Außerdem erlaubt er die Verwendung von
USB-MIDI-Geräten, etwa von Faderboards, und kann mit dem Titan Mobile
Faderwing betrieben werden.

![Titan Two](/docs/images/T2.png)


<Video videoId="wO94RvG6agI" title="T2 USB Interface" />

---

Installieren Sie die Titan PC-Suite (siehe nächstes Kapitel), bevor der
Dongle angeschlossen wird, damit die richtigen Treiber installiert und
verwendet werden.

> Die früheren Titan Ones (mit Kabel) enthalten keinen neuen Lizenzdongle. Zu ihrem Betrieb ist ab Titan Version 12 ein separater Editor AvoKey erforderlich, der parallel mit einem anderen USB-Anschluss verbunden werden muss.

Die Software für den T1 und T2 ist eine spezielle Version der
Titan-Software mit dem Namen Titan Go und sieht etwas anders aus als
beim Titan Mobile und den anderen Pulten, da hier auch alle
Bedienelemente, die ansonsten auf dem auf dem physischen Pult zu finden
wären, auf dem Bildschirm präsent sind.

![Titan Go User Interface](/docs/images/Titan-Go-User-Interface.png)
